# Postflop-Poker-Solver

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: 3-bet-pot-example.yml  flop-3bet-pot-large-spr.yml  flop-4bet-pot-1spr.yml
include/cli/: cli_dispatcher.hpp  solver_commands.hpp
include/game/: game_rules.hpp  game_types.hpp  game_utils.hpp  kuhn_poker.hpp  leduc_poker.hpp  nl_holdem_config.hpp
include/game/holdem/: config.hpp  hand_evaluation.hpp  hand_evaluator.hpp  holdem.hpp  holdem_config.hpp  holdem_parser.hpp  parse_input.hpp
include/io/: output.hpp
include/solver/: cfr.hpp  node.hpp  tree.hpp
include/trainer/: output.hpp  train.hpp  train_kuhn_poker.hpp
include/util/: fixed_vector.hpp  result.hpp  scoped_timer.hpp  size_string.hpp  stack_allocator.hpp  string_utils.hpp  user_input.hpp
src/: main.cpp
src/cli/: cli_dispatcher.cpp  solver_commands.cpp
src/game/: game_utils.cpp  kuhn_poker.cpp  leduc_poker.cpp
src/game/holdem/: hand_evaluation.cpp  hand_evaluator.cpp  holdem.cpp  holdem_parser.cpp  parse_input.cpp
src/io/: output.cpp
src/solver/: cfr.cpp  tree.cpp
src/trainer/: output.cpp  train.cpp  train_kuhn_poker.cpp
src/util/: scoped_timer.cpp  size_string.cpp  string_utils.cpp  user_input.cpp
tests/: CMakeLists.txt  end_to_end_tests.cpp  hand_evaluation_tests.cpp  hand_evaluator_tests.cpp  holdem_action_tests.cpp  holdem_isomorphism_tests.cpp  input_parsing_tests.cpp  kuhn_poker_tests.cpp  leduc_poker_tests.cpp
